# workout-file-generator

./: .gitignore  README.md  pyproject.toml
config/: workouts.example.yaml  workouts.yaml
src/workout_file_generator/: cli.py  model.py  tcx.py  util.py
